# fintech-fraud-merchant-risk

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd-monitoring.yml
artifacts/metrics/: experiments.csv  experiments_old.csv  generation.csv  metrics.json
artifacts/runs/A1_Trial_Run_20260222_114116/metrics/: metrics.json  threshold_report.json
artifacts/runs/A1_Trial_Run_20260222_114116/models/: fraud_model.joblib  merchant_risk.joblib
artifacts/runs/A1_Trial_Run_20260222_114116/reports/: model_card.md
artifacts/runs/A1_baseline_20260222_110831/metrics/: metrics.json  threshold_report.json
artifacts/runs/A1_baseline_20260222_110831/reports/: model_card.md
artifacts/runs/A1_experiment__D4_synthetic_fraud_data__20260224_192749/metrics/: metrics.json  threshold_report.json
configs/: config.yaml
data/raw/: cards.csv  merchants.csv
data/sample_requests/: transaction_001.json
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docker/grafana/dashboards/: fraud-api-monitoring.json
docker/prometheus/: prometheus.yml
k8s/: README.md  api-deployment.yaml  api-service.yaml  dashboard-deployment.yaml  dashboard-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml
src/api/: app.py  service.py
src/common/: experiment_log.py  logging.py  paths.py  run_registry.py  utils.py
src/dashboard/: app.py
src/data/: build_dataset.py  generate.py  schema.py
src/features/: preprocessing.py
src/modeling/: evaluate.py  merchant_risk.py  reason_codes.py  train.py
tests/: test_api_observability.py
(+39 files in other folders)
