[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech-fraud-merchant-risk"
version = "0.1.0"
description = "Production-grade fraud detection with configurable decisioning, API serving, and dashboarding."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.0",
  "streamlit>=1.30",
  "prometheus-client>=0.21",
]

[tool.setuptools]
# Your package folder is literally named "src", so we include it as a package.
# This makes `import src...` work reliably after `pip install -e .`
packages = { find = { where = [ "." ], include = [ "src*" ] } }
